Refactor UI components for improved accessibility and aesthetics; update Button, Card, and LoadingSpinner styles for better visibility and interaction; enhance NarrationPlayer and PageLayout for a more engaging user experience; localize index.html for Korean language support.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Awareness Project</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/heroicons/2.1.1/24/outline/hero-icons.min.css" rel="stylesheet">
+  <!-- Pretendard font for better Korean readability -->
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
 <script type="importmap">
 {
   "imports": {
@@ -15,7 +17,11 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<style>
+  body {
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  }
+</style>
 </head>
 <body class="bg-slate-100 text-slate-800">
   <div id="root"></div>
